RESOLVED FIXED175673
[GStreamer] GstStructure shouldn't be handled through GRefPtr
https://bugs.webkit.org/show_bug.cgi?id=175673
Summary [GStreamer] GstStructure shouldn't be handled through GRefPtr
Zan Dobersek
Reported 2017-08-17 07:57:41 PDT
[GStreamer] GstStructure shouldn't be handled through GRefPtr
Attachments
Patch (3.40 KB, patch)
2017-08-17 07:59 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-08-17 07:59:02 PDT
Xabier Rodríguez Calvar
Comment 2 2017-08-17 08:27:09 PDT
Comment on attachment 318368 [details] Patch O_O
Michael Catanzaro
Comment 3 2017-08-17 08:29:40 PDT
This is bad. How did it not crash? How did it even compile if it doesn't support g_object_ref/unref and there's no template specialization for GstStructure?
Zan Dobersek
Comment 4 2017-08-17 09:37:31 PDT
Comment on attachment 318368 [details] Patch Clearing flags on attachment: 318368 Committed r220861: <http://trac.webkit.org/changeset/220861>
Zan Dobersek
Comment 5 2017-08-17 09:37:35 PDT
All reviewed patches have been landed. Closing bug.
Xabier Rodríguez Calvar
Comment 6 2017-08-17 09:38:01 PDT
(In reply to Michael Catanzaro from comment #3) > This is bad. How did it not crash? How did it even compile if it doesn't > support g_object_ref/unref and there's no template specialization for > GstStructure? I ask myself the same question.
Radar WebKit Bug Importer
Comment 7 2017-08-17 09:38:02 PDT
Zan Dobersek
Comment 8 2017-08-17 09:56:35 PDT
(In reply to Xabier Rodríguez Calvar from comment #6) > (In reply to Michael Catanzaro from comment #3) > > This is bad. How did it not crash? How did it even compile if it doesn't > > support g_object_ref/unref and there's no template specialization for > > GstStructure? > > I ask myself the same question. gst_object_ref() was never called because all values were adopted into the GRefPtr<> object. gst_object_unref() was never called because the managed pointer was leaked from the GRefPtr<> object.
Note You need to log in before you can comment on or make changes to this bug.