[GStreamer] GstStructure shouldn't be handled through GRefPtr https://bugs.webkit.org/show_bug.cgi?id=175673

Reviewed by Xabier Rodriguez-Calvar.

* platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.cpp:
(webkitMediaCommonEncryptionDecryptTransformCaps): GstStructure isn't
ref-counted, so it should be handled through the GUniquePtr<GstStructure>
smart pointer.


Canonical link: https://commits.webkit.org/192335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220861 268f45cc-cd09-0410-ab3c-d52691b4dbfc